# linspace

fmod-exec/: CMakeLists.txt  fmod.cpp  fmod.cpp~
linspace-exec/: CMakeLists.txt  linspace.cpp  linspace.cpp~
